"Migrate deployment to Google Cloud Run"